--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="header-nav-lu link">
             <a class="logo-link link" href="./index.html">WEB<span class="span-logo">Studio</span></a>
                 <ul class="header-nav-item list">
-                    <li><a href="./index.html" class="header-nav-li link">Studio</a></li>
+                    <li><a href="./index.html" class="header-nav-li link current">Studio</a></li>
                     <li><a href="./portfolio.html" class="header-nav-li link">Portfolio</a></li>
                     <li><a href="" class="header-nav-li link">Contacts</a></li>
                 </ul>
@@ -52,9 +52,9 @@
         <ul class="features-ul list">
             <li class="features-li">
                 <div class="svg-box">
-                    <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.scv/antenna 1.svg"></use>
-                    </svg>
+                <svg class="icon icon-antenna-1">
+                    <use xlink:href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
                 </div>
                 <h3 class="features-strategy">Strategy</h3>
                 <p class="features-strategy-p">Our goal is to identify the business problem to walk away with the
@@ -63,7 +63,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.scv/clock 1.svg"></use>
+                        <use href="./images/icons.svg/clock 1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Punctuality</h3>
@@ -73,7 +73,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.scv/diagram 1.svg"></use>
+                        <use href="./images/icons.svg/diagram 1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Diligence</h3>
