--- a/portfolio.html
+++ b/portfolio.html
@@ -39,162 +39,161 @@
     </header>
 
     <!-- Main content -->
-<section class="filter">
-    <div class="container">
-        <h1 class="filter-title visually-hidden">Filter</h1>
-        <ul class="list-div list">
-            <li><button type="button" class="button-all">All</button></li>
-            <li><button type="button" class="button-all">Web Site</button></li>
-            <li><button type="button" class="button-all">App</button></li>
-            <li><button type="button" class="button-all">Design</button></li>
-            <li><button type="button" class="button-all">Marketing</button></li>
-        </ul>
+<main>
+    <section class="filter">
+        <div class="container">
+            <h1 class="filter-title visually-hidden">Filter</h1>
+            <ul class="list-div list">
+                <li><button type="button" class="button-all">All</button></li>
+                <li><button type="button" class="button-all">Web Site</button></li>
+                <li><button type="button" class="button-all">App</button></li>
+                <li><button type="button" class="button-all">Design</button></li>
+                <li><button type="button" class="button-all">Marketing</button></li>
+            </ul>
+            <ul class="portfolio-ul list">
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Banking.jpg" alt="Banking App" width="360" height="300" class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Banking App Interface Concept</h2>
+                            <p class="category">App</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Payment.jpg" alt="Cashless Payment" width="360" height="300"
+                                class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Cashless Payment</h2>
+                            <p class="category">Marketing</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-        <ul class="portfolio-ul list">
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
-                    <div class="link-container">
-                        <img src="./images/Banking.jpg" alt="Banking App" width="360" height="300" class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Banking App Interface Concept</h2>
-                        <p class="category">App</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
-                    <div class="link-container">
-                        <img src="./images/Payment.jpg" alt="Cashless Payment" width="360" height="300"
-                            class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Cashless Payment</h2>
-                        <p class="category">Marketing</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Meditation.jpg" alt="Meditation" width="360" height="300"
+                                class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Meditation</h2>
+                            <p class="category">App</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-                    <div class="link-container">
-                        <img src="./images/Meditation.jpg" alt="Meditation" width="360" height="300"
-                            class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Meditation</h2>
-                        <p class="category">App</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Taxi Service</h2>
+                            <p class="category">Marketing</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-                    <div class="link-container">
-                        <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Taxi Service</h2>
-                        <p class="category">Marketing</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Illustrations.jpg" alt="Screen Illustrations" width="360" height="300"
+                                class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Screen Illustrations</h2>
+                            <p class="category">Design</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-                    <div class="link-container">
-                        <img src="./images/Illustrations.jpg" alt="Screen Illustrations" width="360" height="300"
-                            class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Screen Illustrations</h2>
-                        <p class="category">Design</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Online.jpg" alt="Online Courses" width="360" height="300"
+                                class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Online Courses</h2>
+                            <p class="category">Marketing</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-                    <div class="link-container">
-                        <img src="./images/Online.jpg" alt="Online Courses" width="360" height="300"
-                            class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Online Courses</h2>
-                        <p class="category">Marketing</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Instagram.jpg" alt="Instagram Stories Concept" width="360" height="300"
+                                class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Instagram Stories Concept</h2>
+                            <p class="category">Design</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-                    <div class="link-container">
-                        <img src="./images/Instagram.jpg" alt="Instagram Stories Concept" width="360" height="300"
-                            class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Instagram Stories Concept</h2>
-                        <p class="category">Design</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
+                        <div class="link-container">
+                            <img src="./images/Organic.jpg" alt="Organic Food" width="360" height="300"
+                                class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Organic Food</h2>
+                            <p class="category">Web Site</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list">
+                    <a href="#" class="link-category link">
 
-                    <div class="link-container">
-                        <img src="./images/Organic.jpg" alt="Organic Food" width="360" height="300"
-                            class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Organic Food</h2>
-                        <p class="category">Web Site</p>
-                    </div>
-                </a>
-            </li>
-            <li class="portfolio-list">
-                <a href="#" class="link-category link">
-
-                    <div class="link-container">
-                        <img src="./images/Coffee.jpg" alt="Fresh Coffee" width="360" height="300" class="portfolio-li">
-                        <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                            App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <div class="app-box">
-                        <h2 class="tittle-box tittle">Fresh Coffee</h2>
-                        <p class="category">Web Site</p>
-                    </div>
-                </a>
-            </li>
-        </ul>
-       
+                        <div class="link-container">
+                            <img src="./images/Coffee.jpg" alt="Fresh Coffee" width="360" height="300" class="portfolio-li">
+                            <p class="portfolio-strategy-p">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="app-box">
+                            <h2 class="tittle-box tittle">Fresh Coffee</h2>
+                            <p class="category">Web Site</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>   
     </section>
 </main>
-
 
 <!-- Footer -->
     <footer class="footer">
